--- a/test/test/App.xaml
+++ b/test/test/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="ClienteWPF.App"
+﻿<Application x:Class="test.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ClienteWPF"
+             xmlns:local="clr-namespace:test"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
